@@ -37,6 +37,7 @@ PyCFunction_ClearFreeList
 PyCFunction_GetFlags
 PyCFunction_GetFunction
 PyCFunction_GetSelf
+PyCFunction_New
 PyCFunction_NewEx
 PyCFunction_Type
 PyCallIter_New
